--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2051,24 +2051,6 @@
         "th":"",
         "id":"Tes ketahanan"
     },
-    "skills.TRIAL_OF_STAMINA.description":{
-        "en":"",
-        "fr":"",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
     "skills.TRIAL_OF_STAMINA.effect":{
         "en":"",
         "fr":"",
@@ -2090,24 +2072,6 @@
 	"skills.TRIAL_OF_POWER.name":{
         "en":"Trial of Power",
         "fr":"Épreuve de puissance",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
-    "skills.TRIAL_OF_POWER.description":{
-        "en":"",
-        "fr":"",
         "es":"",
         "ch":"",
         "kr":"",
@@ -2159,27 +2123,9 @@
         "th":"",
         "id":""
     },
-    "skills.TRIAL_OF_HEALTH.description":{
-        "en":"",
-        "fr":"",
-        "es":"",
-        "ch":"",
-        "kr":"",
-        "ru":"",
-        "tr":"",
-        "de":"",
-        "jp":"",
-        "pt":"",
-        "vi":"",
-        "ar":"",
-        "it":"",
-        "pl":"",
-        "th":"",
-        "id":""
-    },
     "skills.TRIAL_OF_HEALTH.effect":{
-        "en":"",
-        "fr":"",
+        "en":"Increases Health.<br>Passive. Increases {0} HP.",
+        "fr":"Augmente les PV Max.<br>Passif. Augmente {0} PV.",
         "es":"",
         "ch":"",
         "kr":"",
