--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -172,7 +172,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chọn làm mục tiêu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -190,7 +190,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Nói riêng",
         "ar":"",
         "it":"",
         "pl":"",
