--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -196,5 +196,59 @@
         "pl":"",
         "th":"",
         "id":"Whisper"
+    },
+    "tooltip.player-menu.group-invite-to-join":{
+        "en":"Invite Group",
+        "fr":"Inviter Groupe",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.player-menu.group-set-new-leader":{
+        "en":"Set new leader",
+        "fr":"Changer leader",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "tooltip.player-menu.group-expel":{
+        "en":"Expel from group",
+        "fr":"Expulser du groupe",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
