--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1941,7 +1941,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Menerima"
     },
     "UI.windows.confirm":{
         "en":"Confirm",
