--- a/Translation/general.json
+++ b/Translation/general.json
@@ -51,7 +51,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Pemain [{0}] telah mengirimi Anda permintaan grup"
     },
     "general.CURRENCY.GOLD":{
         "en":"Gold",
