--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -251,7 +251,7 @@
         "th":"",
         "id":"Keluarkan dari grup"
     },
-    "tooltip.player-menu.group-lean":{
+    "tooltip.player-menu.group-leave":{
         "en":"Leave group",
         "fr":"Partir du groupe",
         "es":"",
