--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -208,7 +208,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sao chép tên",
         "ar":"",
         "it":"",
         "pl":"",
@@ -226,7 +226,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mời vào nhóm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -244,7 +244,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chuyển đội trưởng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -262,7 +262,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đuổi khỏi nhóm",
         "ar":"",
         "it":"",
         "pl":"",
@@ -280,7 +280,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Rời khỏi nhóm",
         "ar":"",
         "it":"",
         "pl":"",
