--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2044,7 +2044,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thuốc thử nghiệm chịu đựng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2062,7 +2062,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tăng khả năng phòng thủ. <br> Bị động. Tăng {0} phòng thủ.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2080,7 +2080,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thuốc thử nghiệm sức mạnh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2116,7 +2116,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thuốc thử nghiệm thể chất",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2134,7 +2134,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tăng sức khỏe. <br> Bị động. Tăng {0} HP.",
         "ar":"",
         "it":"",
         "pl":"",
