--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2566,7 +2566,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Lesser Healing Potion",
+        "vi":"Thuốc chữa bệnh ít hơn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2584,7 +2584,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Healing Potion",
+        "vi":"Thuốc hồi máu",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2602,7 +2602,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Greater Healing Potion",
+        "vi":"Thuốc hồi máu lớn hơn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2620,7 +2620,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Superior Healing Potion",
+        "vi":"Thuốc hồi máu cao cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2638,7 +2638,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Major Healing Potion",
+        "vi":"Thuốc hồi máu chính",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2656,7 +2656,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Super Healing Potion",
+        "vi":"Thuốc hồi máu siêu tốc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2674,7 +2674,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ultimate Healing Potion",
+        "vi":"Thuốc hồi máu cuối cùng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2692,7 +2692,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Endless Healing Potion",
+        "vi":"Thuốc hồi máu bất tận",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2710,7 +2710,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Instant Healing Flask",
+        "vi":"Bình hồi máu tức thì nhỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2728,7 +2728,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Instant Greater Healing Flask",
+        "vi":"Bình hồi máu tức thì trung",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2746,7 +2746,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Instant Major Healing Flask",
+        "vi":"Bình hồi máu chính tức thì lớn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2764,7 +2764,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Instant Quick Healing Flask",
+        "vi":"Bình hồi máu tức thì siêu tốc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2782,7 +2782,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Advanced Instant Healing Flask",
+        "vi":"Bình hồi máu tức thì siêu cấp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2800,7 +2800,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Magic Potion",
+        "vi":"Thuốc năng lượng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2818,7 +2818,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Greater Magic Potion",
+        "vi":"Thuốc năng lượng trung",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2836,7 +2836,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Major Magic Potion",
+        "vi":"Thuốc năng lượng lớn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2854,7 +2854,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Instant Magic Flask",
+        "vi":"Bình năng lượng tức thì",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2872,7 +2872,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Greater Instant Magic Flask",
+        "vi":"Bình ma thuật tức thì lớn hơn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2890,7 +2890,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bột Celebeam vàng",
+        "vi":"Bột màu vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2908,7 +2908,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bột Celebeam đỏ",
+        "vi":"Bột màu đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2926,7 +2926,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bột Celebeam xanh",
+        "vi":"Bột màu xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2944,7 +2944,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cracked Celebeam Vàng",
+        "vi":"Đá bị nứt màu vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2962,7 +2962,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cracked Celebeam Đỏ",
+        "vi":"Đá bị nứt màu đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2980,7 +2980,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cracked Celebeam Xanh",
+        "vi":"Đá bị nứt màu xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2998,7 +2998,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Crude Celebeam Vàng",
+        "vi":"Đá thô màu vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3016,7 +3016,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Crude Celebeam Đỏ",
+        "vi":"Đá thô màu đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3034,7 +3034,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Crude Celebeam Xanh",
+        "vi":"Đá thô màu xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3052,7 +3052,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Celebeam Vàng",
+        "vi":"Đá dung nham vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3070,7 +3070,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Celebeam Đỏ",
+        "vi":"Đá dung nham đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3088,7 +3088,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Celebeam Xanh",
+        "vi":"Đá dung nham xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3106,7 +3106,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Perfect Yellow Celebeam",
+        "vi":"Đá hoàn hảo vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3124,7 +3124,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Perfect Red Celebeam",
+        "vi":"Đá hoàn hảo đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3142,7 +3142,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Perfect Blue Celebeam",
+        "vi":"Đá hoàn hảo xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3160,7 +3160,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Glittery Yellow Celebeam",
+        "vi":"Đá lấp lánh vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3178,7 +3178,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Glittery Red Celebeam",
+        "vi":"Đá lấp lánh đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3196,7 +3196,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Glittery Blue Celebeam",
+        "vi":"Đá lấp lánh xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3214,7 +3214,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá Glory Vàng",
+        "vi":"Đá Vinh Quang Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3232,7 +3232,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá Glory Đỏ",
+        "vi":"Đá Vinh Quang Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3250,7 +3250,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá Glory Xanh",
+        "vi":"Đá Vinh Quang Xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3322,7 +3322,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá Ultimate Vàng",
+        "vi":"Đá Tối Thượng Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3340,7 +3340,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá Ultimate Đỏ",
+        "vi":"Đá Tối Thượng Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3358,7 +3358,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá Ultimate Xanh",
+        "vi":"Đá Tối Thượng Xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3376,7 +3376,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Topaz Vàng",
+        "vi":"Hoàng Ngọc Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3394,7 +3394,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Topaz Đỏ",
+        "vi":"Hoàng Ngọc Đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3412,7 +3412,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Topaz Xanh",
+        "vi":"Hoàng Ngọc Xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3502,7 +3502,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tự động hồi máu Nhỏ",
+        "vi":"Tự động hồi máu I",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3520,7 +3520,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tự động hồi máu Trung bình",
+        "vi":"Tự động hồi máu II",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3538,7 +3538,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tự động hồi máu Lớn",
+        "vi":"Tự động hồi máu III",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3556,7 +3556,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tự động hồi Mana Nhỏ ",
+        "vi":"Tự động hồi Mana I ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3574,7 +3574,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tự động hồi Mana Trung bình",
+        "vi":"Tự động hồi Mana II",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3592,7 +3592,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tự động hồi Mana Lớn",
+        "vi":"Tự động hồi Mana III",
         "ar":"",
         "it":"",
         "pl":"",
