--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3106,7 +3106,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá hoàn hảo vàng",
+        "vi":"Đá Hoàn Hảo vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3124,7 +3124,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá hoàn hảo đỏ",
+        "vi":"Đá Hoàn Hảo đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3142,7 +3142,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá hoàn hảo xanh",
+        "vi":"Đá Hoàn Hảo xanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3160,7 +3160,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá lấp lánh vàng",
+        "vi":"Đá Lấp Lánh vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3178,7 +3178,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá lấp lánh đỏ",
+        "vi":"Đá Lấp Lánh đỏ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3196,7 +3196,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đá lấp lánh xanh",
+        "vi":"Đá Lấp Lánh xanh",
         "ar":"",
         "it":"",
         "pl":"",
