--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -1949,7 +1949,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Сбор Душ",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1967,7 +1967,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Активировация сбора душ. Может видеть душу цели после убийства монстров. Подобранная душа дает опыт. А также сбор душ одного цвета подряд увеличивает бонус опыта.",
         "tr":"",
         "de":"",
         "jp":"",
@@ -1985,7 +1985,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Можно использовать до 3 раз в день",
         "tr":"",
         "de":"",
         "jp":"",
@@ -2003,7 +2003,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Осталось Времени: {0} сек",
         "tr":"",
         "de":"",
         "jp":"",
@@ -2021,7 +2021,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Осталось Душ: {0}",
         "tr":"",
         "de":"",
         "jp":"",
@@ -2039,7 +2039,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Испытание на Выносливость",
         "tr":"",
         "de":"",
         "jp":"",
@@ -2057,7 +2057,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Повышает защиту. <br> Пассив. Добавляет {0} защиты.",
         "tr":"",
         "de":"",
         "jp":"",
@@ -2075,7 +2075,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Испытание Силы",
         "tr":"",
         "de":"",
         "jp":"",
@@ -2111,7 +2111,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Испытание Жизни",
         "tr":"",
         "de":"",
         "jp":"",
@@ -2129,7 +2129,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Увеличивает здоровье. <br> Пассивный. Добавляет {0} HP",
         "tr":"",
         "de":"",
         "jp":"",
