--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -167,7 +167,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Нацелится",
         "tr":"",
         "de":"",
         "jp":"",
@@ -185,7 +185,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Шепотом",
         "tr":"",
         "de":"",
         "jp":"",
@@ -203,7 +203,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Копировать Имя",
         "tr":"",
         "de":"",
         "jp":"",
@@ -221,7 +221,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Пригласить в группу",
         "tr":"",
         "de":"",
         "jp":"",
@@ -239,7 +239,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Сменить лидера",
         "tr":"",
         "de":"",
         "jp":"",
@@ -257,7 +257,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Исключить из группы",
         "tr":"",
         "de":"",
         "jp":"",
@@ -275,7 +275,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Покинуть Группу",
         "tr":"",
         "de":"",
         "jp":"",
