--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2067,7 +2067,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Meningkatkan pertahanan. <br> Pasif. Meningkatkan {0} pertahanan."
     },
 	"skills.TRIAL_OF_POWER.name":{
         "en":"Trial of Power",
