--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2122,5 +2122,23 @@
         "pl":"",
         "th":"",
         "id":"Keterampilan Bakat"
+    },
+    "UI.windows.config.title":{
+        "en":"Configs",
+        "fr":"Paramètres",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
