--- a/Translation/config.json
+++ b/Translation/config.json
@@ -17,7 +17,7 @@
         "th":"",
         "id":""
     },
-	"config.sound.graphics":{
+	"config.graphics.title":{
         "en":"Graphics",
         "fr":"Graphiques",
         "es":"",
