--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2129,7 +2129,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Настройки",
         "tr":"",
         "de":"",
         "jp":"",
