--- a/Translation/config.json
+++ b/Translation/config.json
@@ -5,7 +5,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Звук",
         "tr":"",
         "de":"",
         "jp":"",
@@ -23,7 +23,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Графика",
         "tr":"",
         "de":"",
         "jp":"",
@@ -41,7 +41,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Звук окружения",
         "tr":"",
         "de":"",
         "jp":"",
@@ -59,7 +59,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Громкость звуковых эффектов",
         "tr":"",
         "de":"",
         "jp":"",
