--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -293,7 +293,7 @@
         "es":"",
         "ch":"",
         "kr":"",
-        "ru":"",
+        "ru":"Распустить группу",
         "tr":"",
         "de":"",
         "jp":"",
