--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2134,7 +2134,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cài đặt",
         "ar":"",
         "it":"",
         "pl":"",
