--- a/Translation/config.json
+++ b/Translation/config.json
@@ -10,7 +10,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Âm thanh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28,7 +28,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Đồ họa",
         "ar":"",
         "it":"",
         "pl":"",
@@ -46,7 +46,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Âm thanh của môi trường",
         "ar":"",
         "it":"",
         "pl":"",
@@ -64,7 +64,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Âm lượng hiệu ứng âm thanh",
         "ar":"",
         "it":"",
         "pl":"",
