--- a/Translation/general.json
+++ b/Translation/general.json
@@ -46,7 +46,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Người chơi [{0}] gửi cho bạn một yêu cầu tham gia nhóm",
         "ar":"",
         "it":"",
         "pl":"",
