--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2098,7 +2098,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tăng tấn công. <br> Bị động. Tăng {0} ATK",
         "ar":"",
         "it":"",
         "pl":"",
