--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1936,7 +1936,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chấp nhận,
         "ar":"",
         "it":"",
         "pl":"",
