--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1936,7 +1936,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Chấp nhận,
+        "vi":"Chấp nhận",
         "ar":"",
         "it":"",
         "pl":"",
