--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4510,7 +4510,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Mật ong",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4528,7 +4528,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cỏ bốn lá",
         "ar":"",
         "it":"",
         "pl":"",
