--- a/Translation/config.json
+++ b/Translation/config.json
@@ -15,7 +15,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Suara"
     },
 	"config.graphics.title":{
         "en":"Graphics",
@@ -33,7 +33,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Grafik"
     },
     "config.sound.volume.ambient":{
         "en":"Volume of ambience",
@@ -51,7 +51,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Suara BGM"
     },
     "config.sound.volume.effects":{
         "en":"Volume of sound effects",
@@ -69,6 +69,6 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Suara Efek"
     }
 }
