--- a/Translation/item.json
+++ b/Translation/item.json
@@ -4515,7 +4515,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Madu"
     },
     "item.40002.name":{
         "en":"Four-leafed Flower",
@@ -4533,6 +4533,6 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Semanggi berdaun empat"
     }
 }
