--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -2103,7 +2103,7 @@
         "it":"",
         "pl":"",
         "th":"",
-        "id":""
+        "id":"Meningkatkan Serangan. <br> Pasif. Meningkatkan {0} ATK."
     },
     "skills.TRIAL_OF_HEALTH.name":{
         "en":"Trial of Health",
