--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2140,5 +2140,23 @@
         "pl":"",
         "th":"",
         "id":"Konfigurasi"
+    },
+    "UI.windows.events.title":{
+        "en":"Events",
+        "fr":"Événements",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
