--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2158,5 +2158,59 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.events.tab.daily":{
+        "en":"Daily",
+        "fr":"Journalier",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.events.tab.weekly":{
+        "en":"Weekly",
+        "fr":"Hebdomadaire",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.events.tab.other":{
+        "en":"Other",
+        "fr":"Autre",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
