--- a/Translation/event.json
+++ b/Translation/event.json
@@ -37,7 +37,61 @@
     },
     "event.btn.not-time":{
         "en":"Not Time",
-        "fr":"",
+        "fr":"Horaires",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.lava-core.name":{
+        "en":"Lava Core X 10",
+        "fr":"Coeur de lave X 10",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.lava-core.description-1":{
+        "en":"Faster Lava Core refresh rate",
+        "fr":"Taux de rafraichissement du Coeur de Lave plus élevé",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.lava-core.description-2":{
+        "en":"Time: 11:00-12:00 19:00-20:00",
+        "fr":"Horaires: 11:00-12:00 19:00-20:00",
         "es":"",
         "ch":"",
         "kr":"",
