--- a/Translation/event.json
+++ b/Translation/event.json
@@ -53,7 +53,7 @@
         "th":"",
         "id":""
     },
-    "event.lava-core.name":{
+    "event.lava-core.title":{
         "en":"Lava Core X 10",
         "fr":"Coeur de lave X 10",
         "es":"",
