--- a/Translation/event.json
+++ b/Translation/event.json
@@ -10,7 +10,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vào",
         "ar":"",
         "it":"",
         "pl":"",
@@ -28,7 +28,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ra",
         "ar":"",
         "it":"",
         "pl":"",
@@ -46,7 +46,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Không Hoạt Động",
         "ar":"",
         "it":"",
         "pl":"",
@@ -64,7 +64,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lõi Dung Nham",
         "ar":"",
         "it":"",
         "pl":"",
@@ -80,7 +80,7 @@
         "ru":"",
         "tr":"",
         "de":"",
-        "jp":"",
+        "jp":"Tốc độ tái tạo Lõi Dung nham nhanh hơn",
         "pt":"",
         "vi":"",
         "ar":"",
@@ -100,7 +100,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thời Gian: 11:00 19:00-20:00",
         "ar":"",
         "it":"",
         "pl":"",
