--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -2152,7 +2152,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Sự Kiện",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2170,7 +2170,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hàng Ngày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2188,7 +2188,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hàng Tuần",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2206,7 +2206,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khác",
         "ar":"",
         "it":"",
         "pl":"",
